# math164-raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  raytracer.cpp  raytracer_png.cpp  raytracer_ppm.cpp  raytracer_ppm2.cpp  raytracer_progressive.cpp
geometry/: geometry.h  sphere.cpp  sphere.h
material/: bsdf.cpp  bsdf.h  conductor_bsdf.cpp  conductor_bsdf.h  emission_bsdf.cpp  emission_bsdf.h  ggx_conductor_bsdf.cpp  ggx_conductor_bsdf.h  ggx_conductor_bsdf_is.cpp  ggx_conductor_bsdf_is.h  lambert_bsdf.cpp  lambert_bsdf.h  lambert_bsdf_is.cpp  lambert_bsdf_is.h  uniform_sampling_bsdf.cpp  uniform_sampling_bsdf.h
raytrace/: object.cpp  object.h  radiance.cpp  radiance.h  ray.h  scene.cpp  scene.h
sample/: box_muller_sampler.cpp  box_muller_sampler.h  marsaglia_polar_sampler.cpp  marsaglia_polar_sampler.h  pixel_sampler.cpp  pixel_sampler.h
util/: linear_algebra.cpp  linear_algebra.h  util.cpp  util.h
